--- a/typescript/package.json
+++ b/typescript/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "description": "TypeScript DApp",
   "dependencies": {
+    "kubo-rpc-client": "^4.1.1",
     "openapi-fetch": "^0.7",
     "viem": "^1"
   },
